# TexturingPipeline

./: .gitignore  CMakeLists.txt  Conclusion.md  README.md
cmake/: FindGMP.cmake  FindMPFR.cmake
doc/: Pipeline.md
include/: common.h
src/: CMakeLists.txt
src/MeshPolyRefinement/: CMakeLists.txt
src/MeshPolyRefinement/Base/: TriMesh.h
src/MeshPolyRefinement/DataIO/: IO.cpp  IO.h  Repair.cpp  Repair.h
src/MeshPolyRefinement/PlaneDecimation/: DelaunayRemesh2D.cpp  DelaunayRemesh2D.h  PlaneDecimator.cpp  PlaneDecimator.h  PlaneEdgeDecimator.cpp  PlaneEdgeDecimator.h  PlaneRemesh.h
src/MeshPolyRefinement/PlaneEstimation/: PlaneManifold.cpp  PlaneManifold.h  PlaneMerge.cpp  PlaneMerge.h  RegionExpand.cpp  RegionExpand.h  RegionGrowing.cpp  RegionGrowing.h
src/MeshPolyRefinement/PlaneOptimization/: EnergyFunction.cpp  EnergyFunction.h  MeshSubdivide.cpp  MeshSubdivide.h  Optimize.cpp  Optimize.h
src/MeshPolyRefinement/Visualize/: Visualize.cpp  Visualize.h
src/MeshRepair/: CMakeLists.txt  MeshSimplification.cpp  MeshSimplification.h  MeshSubdivision.cpp  MeshSubdivision.h  README.md
src/MeshSubdivision/: CMakeLists.txt  MeshSubdivision.cpp
src/MvsTexturing/: CMakeLists.txt  MvsTexturing.cpp  MvsTexturing.h  Parameter.h
src/MvsTexturing/Base/: FaceGroup.h  GridMapPacking.cpp  GridMapPacking.h  LabelGraph.cpp  LabelGraph.h  RectBin.cpp  RectBin.h  Settings.h  SparseTable.h  TextureAtlas.cpp  TextureAtlas.h  TexturePatch.cpp  TexturePatch.h  TriangleMesh.cpp  View.cpp  View.h
src/MvsTexturing/IO/: IO.cpp  IO.h  MaterialLib.cpp  MaterialLib.h  ObjModel.cpp  ObjModel.h
src/MvsTexturing/Mapper/: AtlasMapper.cpp  AtlasMapper.h  FaceOutlierDetection.cpp  FaceOutlierDetection.h  PhotoConsistencyCheck.cpp  PhotoConsistencyCheck.h  SceneBuilder.cpp  SceneBuilder.h  SeamSmoother.cpp  SeamSmoother.h  ViewSelection.cpp  ViewSelection.h
src/MvsTexturing/Math/: Histogram.cpp  Histogram.h  Rect2D.h  Tri2D.cpp  Tri2D.h  Utils.cpp  histogram.cpp  histogram.h
src/MvsTexturing/Repair/: MeshSimplification.cpp  MeshSimplification.h  MeshSubdivision.cpp  MeshSubdivision.h
src/MvsTexturing/TextureMapper/: AtlasMapper.cpp  AtlasMapper.h  PhotoConsistencyCheck.cpp  PhotoConsistencyCheck.h  SceneBuilder.cpp  SceneBuilder.h  SeamSmoother.cpp  ViewSelection.cpp  ViewSelection.h
src/MvsTexturing/Utils/: MeshAdapter.cpp  MeshAdapter.h  PoissonBleding.h  PoissonBlending.cpp  ProgressCounter.h  Settings.h  Timer.cpp  Timer.h  Utils.h
tests/Exampel_test_PlaneTexMerge/: CMakeLists.txt  PlaneMergeUtils.cpp  PlaneMergeUtils.h  README.md  main.cpp
tests/Example_test_MakeMeshDense/: CMakeLists.txt  README.md  main.cpp
tests/Example_test_MeshPolyRefinement/: CMakeLists.txt  main.cpp
tests/Example_test_MvsTexturing/: Arguments.cpp  Arguments.h  CMakeLists.txt  README.md  main.cpp
tests/Example_test_RedundantTextureRemoval/: CMakeLists.txt  README.md  RedundantTextureRemoval.cpp  TextureRemoval.cpp  TextureRemoval.h
tests/Example_test_TextureRemeshing/: CMakeLists.txt  MeshSimplification.cpp  MeshSimplification.h  README.md  RemeshingUtils.cpp  RemeshingUtils.h  main.cpp
